# imageAgent

./: .gitignore  README.md  pyproject.toml
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/test_images/: test_llm_response.json  translation_test_20250218_145835.json  translation_test_20250218_150425.json  translation_test_20250218_150716.json  translation_test_20250218_155110.json  translation_test_20250218_160656.json
image_agent/: __init__.py  config.py  main.py  schemas.py  test_gemini_vision.py  test_google_vision.py  test_google_vision_overlay.py  test_image_translation.py  test_multi_ocr.py  test_ocr.py  test_ocr_enhanced.py  test_overlay_generation.py  test_text_extraction.py  test_translation_strategies.py
image_agent/services/: image_translation_service.py  ocr_service.py  overlay_service.py  text_extraction_service.py  translation_service.py  vision_service.py
