[tool.poetry]
name = "imageagent"
version = "0.1.0"
description = "Image AI agent for travelers and expats"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "imageagent"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
transformers = "^4.35.0"
torch = "^2.1.0"
numpy = "^1.24.0"
ruff = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=imageagent" 